fixed pagination on small screen

--- a/src/components/asset/Asset.css
+++ b/src/components/asset/Asset.css
@@ -393,6 +393,9 @@ td a {
     background: red;
     padding: 5px;
   } */
+  .pagination{
+    margin-bottom: -5px;
+  }
   .pagination li {
     padding: 7px;
   }
